fixed overflow text issue

--- a/src/components/Home/_home.scss
+++ b/src/components/Home/_home.scss
@@ -590,6 +590,7 @@
 
       &-detail {
         p {
+          word-break: break-word;
           margin: 2rem 0;
           color: gray;
 
