--- a/src/components/Review/_review.scss
+++ b/src/components/Review/_review.scss
@@ -251,6 +251,7 @@
         }
         .lower {
           p {
+            word-break: break-word;
             color: gray;
           }
           .remove{
